<resources>
    <string name="app_name">" MicrolectureVideo"</string>
    <string name="textView0">" 微课视频"</string>
    <string name="textView1">" 习题微课"</string>
    <string name="textView2">" 我的课程"</string>
    <string name="textView3">" 我的下载"</string>
    <string name="textView4">" 确定"</string>
    <string name="textView5">" 筛选课程"</string>
    <string name="textView6">" 学段"</string>
    <string name="textView7">" 年级"</string>
    <string name="textView8">" 学科"</string>
    <string name="textView9">" 版本"</string>
    <string name="textView10">" 模块"</string>
    <string name="textView11">" 分类"</string>
    <string name="textView12">" 视频详情"</string>
    <string name="textView13">" 免费课程"</string>
    <string name="textView14">" 收费课程"</string>
    <string name="textView15">" 购买"</string>
    <string name="textView16">" 下载"</string>
    <string name="textView17">" 视频解析"</string>

</resources>
