<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.administrator.microlecturevideo.main.mvp.activity.weikevideo.activity.ScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#21a574"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_screen"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_v" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textView5"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView6"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView7"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView8"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView9"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:id="@+id/layout_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView10"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/textView11"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/gridview_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:numColumns="5"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_screen"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#21a574"
        android:text="@string/textView4" />
</LinearLayout>