<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.administrator.microlecturevideo.main.mvp.activity.weikevideo.activity.MainActivity">

    <FrameLayout
        android:id="@+id/feamelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray1"

        />

    <LinearLayout
        android:id="@+id/mainactivity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_myvideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_tv" />

            <TextView
                android:id="@+id/txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView0"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_book" />

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView2"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_down" />

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView3"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
